bugfix/suite-536 css alignment

--- a/src/Pyz/Yves/DiscountPromotionWidget/Theme/default/components/molecules/variant/variant.scss
+++ b/src/Pyz/Yves/DiscountPromotionWidget/Theme/default/components/molecules/variant/variant.scss
@@ -1,7 +1,8 @@
 @mixin shop-ui-variant($name: '.variant') {
     #{$name} {
+      display: flex;
+      align-items: center;
         .select {
-            display: inline-block;
             border: none;
             select {
                 border: none;
@@ -13,7 +14,15 @@
         &__title {
             font: normal 13px $setting-font-family-additional;
             line-height: 1.31;
+            flex: 1;
         }
     }
+    .variant-configurator {
+      display: flex;
+      justify-content: flex-start;
+      form {
+        display: flex;
+        flex-direction: column;
+      }
+    }
 }
-@include shop-ui-variant();
